made more visibility on menu and menu disappear on click, projects page arrow fix

--- a/css/header.css
+++ b/css/header.css
@@ -203,13 +203,13 @@ nav .nav-container{
 
 	@keyframes header-animation{
 		0%{background: rgba(255,255,255,0.3);}
-		100%{background: rgba(255,255,255,0.65);}
+		100%{background: rgba(255,255,255,0.85);}
 	}
 
 	.nav-item{
 		width: 100%;
 		opacity: 0;
-		background: rgba(255,255,255,0.5);
+		background: rgba(255,255,255,0.8);
 
 		transition: opacity 0.2s;
 	}
