--- a/css/skills.css
+++ b/css/skills.css
@@ -295,7 +295,6 @@
 
 	.row-container{
 		position: relative;
-		height: 600px;
 		width: 100vw;
 		display: flex;
 		flex-direction: column;
@@ -305,7 +304,7 @@
 	.row-content{
 		width: 100%;
 		position: relative;
-		min-height: 300px;
+		min-height: 400px;
 
 	}
 }
